fix: 중앙정렬(부모요소 display: flex, flex-direction: column; / 자식요소는 각각 text-align:center처리함!), 스티키 살리기! (    position: sticky; top 등 값 무조건 지정 + 부모 조상 요소에 overflow 옵션 있어선 안됨 ㅠㅠ)

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -8,8 +8,6 @@ html, body {
   width: 100%;
   height: auto;
   font-family: 'Nunito', sans-serif;
-  overflow-x: hidden;  /* Prevent horizontal scrolling */
-  overflow-y: auto;    /* Allow vertical scrolling */
 }
 
 body {
@@ -19,7 +17,7 @@ body {
 #root {
   background-color: white;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 a {
@@ -167,14 +165,14 @@ label {
 
 .root-wrap {
   display: block;
-  height: 100%;
-  overflow: hidden;
+  height: auto;
   width: 100%;
   nav {
     background: #fff;
     border-bottom: 1px solid #ddd;
     height: 55px;
     position: sticky;
+    position: -webkit-sticky;
     top: 0px;
     margin-bottom: 10px;
   }
