--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -29,8 +29,8 @@
 }
 
 .d-day-title {
-  display: inline-block;
   background: #FDEDEC;
+  display: inline-flex;
   height: auto;
   font-size: 1rem;
   display: flex;
@@ -39,9 +39,13 @@
   justify-content: center;
 }
 .d-day-content {
-  display: block;
+  display: flex;
+  flex-direction: column;
   margin: 0 10px 0 10px;
   white-space: nowrap;
+}
+.d-day-text {
+  text-align: center;
 }
 .normal-content {
   background: #f3faff;
